<resources>
    <string name="app_name">My Calc</string>
    <string name="div">÷</string>
    <string name="clear">C</string>
    <string name="multi">×</string>
    <string name="delete">←</string>
    <string name="_9">9</string>
    <string name="minus">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="equals">=</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="_7">7</string>
    <string name="defualtValue">0</string>
    <string name="_8">8</string>
    <string name="change">🔁</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="square_root">√</string>
    <string name="pow">xʸ</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="pai">π</string>
    <string name="mod">mod</string>
</resources>