<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/alert_dark_frame"
    tools:context=".MainActivity2">


    <TextView
        android:id="@+id/myResult2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@color/material_dynamic_neutral80"
        android:gravity="end"
        android:padding="24dp"
        android:text="@string/_0"
        android:textColor="#222222"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <GridLayout
        android:id="@+id/scientific_buttons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:background="@android:drawable/alert_dark_frame"
        android:columnCount="4"
        android:padding="8dp"
        android:rowCount="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myResult2">


        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_two"
            android:text="@string/sin" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_two"
            android:text="@string/cos" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_two"
            android:text="@string/tan" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_two"
            android:text="@string/square_root" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_two"
            android:text="@string/pow" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_two"
            android:text="@string/ln" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_two"
            android:text="@string/log" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_two"
            android:text="@string/pai" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_one"
            android:text="@string/_7" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_one"
            android:text="@string/_8" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_one"
            android:text="@string/_9" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_one"
            android:text="@string/div" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_one"
            android:text="@string/_4" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_one"
            android:text="@string/_5" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_one"
            android:text="@string/_6" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_one"
            android:text="@string/multi" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_one"
            android:text="@string/_1" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_one"
            android:text="@string/_2" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_one"
            android:text="@string/_3" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_one"
            android:text="@string/minus" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_one"
            android:text="@string/_0" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_one"
            android:text="@string/dot" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_one"
            android:text="@string/equals" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_one"
            android:text="@string/plus" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_one"
            android:text="@string/clear" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_one"
            android:text="@string/delete" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_one"
            android:text="@string/change" />

        <Button
            style="@style/CalcButtonStyle"
            android:background="@drawable/design_button_one"
            android:text="@string/mod" />

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
