<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/myResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#C1B7B7"
        android:gravity="end"
        android:padding="16dp"
        android:text="@string/defualtValue"
        android:textColor="#000"
        android:textSize="46sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myResult">


        <Button
            style="@style/CalcButton"
            android:background="@drawable/design_button_one"
            android:onClick="onButtonClick"
            android:text="@string/clear" />

        <Button
            style="@style/CalcButton"
            android:background="@drawable/design_button_one"
            android:onClick="onButtonClick"
            android:text="@string/div" />

        <Button
            style="@style/CalcButton"
            android:background="@drawable/design_button_one"
            android:onClick="onButtonClick"
            android:text="@string/multi" />

        <Button
            style="@style/CalcButton"
            android:background="@drawable/design_button_one"
            android:onClick="onButtonClick"
            android:text="@string/delete" />


        <Button
            style="@style/CalcButton"
            android:layout_width="25dp"
            android:background="@drawable/design_button_one"
            android:onClick="onButtonClick"
            android:text="@string/_7" />

        <Button
            style="@style/CalcButton"
            android:layout_width="40dp"
            android:background="@drawable/design_button_one"
            android:onClick="onButtonClick"
            android:text="@string/_8" />

        <Button
            style="@style/CalcButton"
            android:layout_width="33dp"
            android:background="@drawable/design_button_one"
            android:onClick="onButtonClick"
            android:text="@string/_9" />

        <Button
            style="@style/CalcButton"
            android:background="@drawable/design_button_one"
            android:onClick="onButtonClick"
            android:text="@string/minus" />


        <Button
            style="@style/CalcButton"
            android:background="@drawable/design_button_one"
            android:onClick="onButtonClick"
            android:text="@string/_4" />

        <Button
            style="@style/CalcButton"
            android:background="@drawable/design_button_one"
            android:onClick="onButtonClick"
            android:text="@string/_5" />

        <Button
            style="@style/CalcButton"
            android:background="@drawable/design_button_one"
            android:onClick="onButtonClick"
            android:text="@string/_6" />

        <Button
            style="@style/CalcButton"
            android:background="@drawable/design_button_one"
            android:onClick="onButtonClick"
            android:text="@string/plus" />


        <Button
            style="@style/CalcButton"
            android:background="@drawable/design_button_one"
            android:onClick="onButtonClick"
            android:text="@string/_1" />

        <Button
            style="@style/CalcButton"
            android:background="@drawable/design_button_one"
            android:onClick="onButtonClick"
            android:text="@string/_2" />

        <Button
            style="@style/CalcButton"
            android:background="@drawable/design_button_one"
            android:onClick="onButtonClick"
            android:text="@string/_3" />

        <Button
            style="@style/CalcButton"
            android:layout_height="70dp"
            android:layout_rowSpan="2"
            android:background="@drawable/design_button_one"
            android:onClick="onButtonClick"
            android:text="@string/equals" />


        <Button
            style="@style/CalcButton"

            android:background="@drawable/design_button_one"
            android:onClick="onButtonClick"
            android:text="@string/_0" />

        <Button
            style="@style/CalcButton"
            android:background="@drawable/design_button_one"
            android:onClick="onButtonClick"
            android:text="@string/dot" />

        <Button
            style="@style/CalcButton"
            android:background="@drawable/design_button_one"
            android:onClick="onButtonClick"
            android:text="@string/change" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
